<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">三圣凯瑞</string>
    <string name="company_name">三圣凯瑞</string>
    <string name="load_more">"加载更多"</string>
    <string name="no_more_meter">数据已全部显示</string>
    <string name="date_message_received_today">"今天<xliff:g id="TIME">%1$s</xliff:g>"</string>
    <string name="date_message_received_yesterday">"昨天<xliff:g id="TIME">%1$s</xliff:g>"</string>
    <string name="date_message_received">"<xliff:g id="DAY_AND_DATE">%1$s</xliff:g>&#160;&#160;<xliff:g id="TIME">%2$s</xliff:g>"</string>
    <string name="confirm">"确定"</string>
    <string name="save">"保存"</string>
    <string name="cancel">"取消"</string>

    <string name="function_socket">单相表检测</string>
    <string name="function_meter_list">三相表检测</string>
    <string name="function_file_manager">档案管理</string>
    <string name="function_data_list">数据浏览</string>
    <string name="function_create_data">本地模块检测</string>
    <string name="function_test">远程模块检测</string>
    <string name="function_check_update">台区识别</string>
    <string name="function_gps">GPS定位</string>
    <string name="function_home">国网376.1主站</string>
    <string name="function_collect">集中器检测</string>
    <string name="function_data_upload">数据补抄</string>
    <string name="function_info_collection">组网拓扑</string>
    <string name="function_protocol">规约解析</string>
    <string name="function_meter_test">现场售电</string>
    <string name="function_settings">系统设置</string>
    <string name="function_generate_data">生成数据</string>
    <string name="function_compose_location">新增现场信息</string>


    <string name="meter_detail_id_title">电表标识</string>
    <string name="meter_detail_name_title">电表名称</string>
    <string name="meter_detail_value_time_title">数据时标</string>
    <string name="meter_detail_read_time_title">读取时间</string>
    <string name="meter_detail_data_type_title">数据类型</string>
    <string name="meter_value_title">电表数值</string>
    <string name="meter_detail_value_title">尖峰平谷</string>
    <string name="meter_detail_important_title">是否重要</string>
    <string name="meter_detail_default_content"></string>

    <string name="date_time_done">完成</string>
    <string name="index_page">电力系统智能终端</string>
    <string name="connect_page">通讯</string>
    <string name="db_show">数据库展示</string>
    <string name="create_db">生成测试数据库</string>
    <string name="db_info">电表数据详情</string>
    <string name="change_db">修改电表书库</string>
    <string name="create_db_info">正在生成测试数据，请稍后 ... </string>
    <string name="has_create_db">测试数据已生成 </string>
    <string name="loading_settings">正在加载设置信息</string>

    <string name="yes">是 </string>
    <string name="no">否 </string>
    <string name="db_rdj">日冻结</string>
    <string name="db_realdata">实时数据</string>
    <string name="db_name">电表名称：</string>
    <string name="db_id">电表ID：</string>
    <string name="db_type">数据类型：</string>
    <string name="db_tip">数据时标：</string>
    <string name="db_time">读取时间：</string>
    <string name="db_value">电表值：</string>


    <string name="too_long">名称过长</string>
    <string name="illegal_input">输入非法字符</string>


    <string name="send">发送</string>
    <string name="conn">连接服务</string>
    <string name="clear">清空数据</string>
    <string name="start_ser">开启服务</string>
    <string name="start_ser_close">关闭服务</string>
    <string name="start_ser_tip1">请开启服务</string>
    <string name="start_ser_tip2">请连接服务</string>
    <string name="start_ser_tip3">服务器已开启！</string>
    <string name="start_ser_tip4">已经连接到服务器</string>
    <string name="conn_ser_err1">服务关闭或连接失败，请尝试开启服务</string>
    <string name="conn_ser_err2">服务无法解析此命令</string>
    <string name="conn_ser_err3">注意，输入不能为空！</string>
    <string name="server">服务器：</string>
    <string name="client">客户端：</string>
    <string name="ser_port">端口:</string>

    <string name="no_available_network">无可用网络</string>

    <string name="capital_on">打开</string>
    <string name="capital_off">关闭</string>

    <string name="crop_image_from_gallery">从相册选择</string>
    <string name="crop_image_from_camera">拍照</string>
    <string name="select_photo_type">选择图片</string>
    <!--baidu-sample needed-->
    <string name="action_settings">Settings</string>
    <string name="start_location">开启定位</string>
    <string name="stop_location">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
        62 ： 扫描整合定位依据失败。此时定位结果无效。\n
        63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
        65 ： 定位缓存的结果。\n
        66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
        67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
        68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
        161： 表示网络定位结果\n
        162~167： 服务端定位失败\n
        502：key参数错误\n
        505：key不存在或者非法\n
        601：key服务被开发者自己禁用\n
        602：key mcode不匹配\n
        501～700：key验证失败\n</string>
    <!--baidu-sample needed-->
    <!-- 电表检测-->
    <string name = "whm_item_dqbm">当前表码</string>
    <string name = "whm_item_sxdy">三相电压</string>
    <string name = "whm_item_dbtime">电表时间</string>
    <string name = "whm_item_djtime">冻结时间</string>
    <string name = "whm_item_symoney">剩余金额</string>
    <string name = "whm_item_syqk">失压情况</string>
    <string name = "whm_item_kgtimes">开盖次数</string>
    <string name = "whm_item_tztimes">跳闸次数</string>

    <string name = "whm_bl_read_address">读地址</string>
    <string name = "whm_bl_choose_db">选择电表</string>
    <string name = "whm_bl_start">开始检测</string>
    <string name = "whm_bl_choose_items">选择项目</string>
    <string name = "whm_bl_show_log">显示日志</string>
    <string name = "whm_bl_close_log">关闭日志</string>

    <string name = "whm_db_address">电表地址</string>
    <string name = "whm_db_conn_type">信道类型</string>

    <string name="meter_test_modify_address">电表地址</string>
    <string name="meter_test_connect_type">通讯类型</string>
    <string name="meter_test_read_address">读地址</string>
    <string name="meter_test_select_meter">选择电表</string>
    <string name="edit_meter_adders">输入电表地址</string>

    <string name="meter_data_filter_start_time">开始时间</string>
    <string name="meter_data_filter_end_time">结束时间</string>
    <string name="meter_data_filter_select_collect">集中器</string>
    <string name="meter_data_filter_select_meter">电表</string>
    <string name="meter_data_filter_data_type">数据类型</string>
    <string name="meter_data_filter_data_content">数据项</string>


    <!-- for scanning module by hua-->
    <string name="app_picker_name">应用</string>
    <string name="button_ok">确定</string>
    <string name="menu_settings">设置</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">闪光灯打开方式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_try_bsplus">尝试条码扫描器+</string>
    <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="msg_error">错误</string>
    <string name="msg_invalid_value">值无效</string>

</resources>
